package basketball;

public interface Mediator {
    void sendMessage(String message, Player sender);
}
